# solcast-api-python-sdk

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: black.yml  docs.yml  publish-to-pypi.yml  test.yml
aggregations/: index.html
aggregrations/: index.html
api/client/: index.html
api/response/: index.html
docs/: aggregations.md  forecast.md  historic.md  index.md  live.md  pv_power_sites.md  tmy.md
docs/api/: client.md  response.md
docs/notebooks/: 1 Getting Data: Make Concurrent Requests.ipynb  1.1 Getting Data - Historic Solar Radiation.ipynb  1.2 Getting Data - TMY in your local timezone.ipynb  1.3 Getting Data - Make Concurrent Requests.ipynb  2.1 PVLib - ModelChain with Solcast weather data.ipynb  2.1 PVLib: ModelChain with Solcast weather data.ipynb  2.2 PVLib - Using pvlib.iotools helper functions to get Solcast Data.ipynb  2.3 Dust Soiling with Kimber.ipynb  3.1 Comparing to Measurements - Timezone and Time Period alignment.ipynb  3.1_sample_measurements.csv  3.2 Comparing to Measurements - Quality Controlling and Gap Filling Measurements with Solcast Actuals.ipynb  3.2 Comparing to Measurements [GHI] - Quality Controlling and Gap Filling Measurements with Solcast Actuals.ipynb  3.2_sample_measurements.csv  3.2b Comparing to Measurements [GTI] - Quality Controlling and Gap Filling Measurements with Solcast Actuals.ipynb  3.4 Rooftop PV Tuning.ipynb  (+10 more)
forecast/: index.html
historic/: index.html
live/: index.html
pv_power_sites/: index.html
solcast/: __init__.py  aggregations.py  api.py  forecast.py  historic.py  historic_multi_month.py  live.py  location_data.csv  pv_power_sites.py  tmy.py  unmetered_locations.py  urls.py
tests/: test_client.py  test_forecast.py  test_historic.py  test_live.py  test_pv_power_sites.py  test_tmy.py
tmy/: index.html
(+19 files in other folders)
