[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "solcast"
description = "a simple Python SDK for the Solcast API"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/solcast/"
Documentation = "https://solcast.github.io/solcast-api-python-sdk"
Repository = "https://github.com/Solcast/solcast-api-python-sdk"

[project.optional-dependencies]
docs = [
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]==0.22",
    "mkdocs-jupyter",
    "kaleido"
]
all = [
    "notebook",
    "matplotlib",
    "pandas",
    "black",
    "solcast[docs]"
]

[tool.hatch.version]
path = "solcast/__init__.py"

[tool.mypy]
strict = true

xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true
source = [
    "docs",
    "tests",
    "solcast"
]
context = '${CONTEXT}'
